--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # 추가 디렉토리
-.settings
-.vscode
+/.settings
+/.vscode
+/target/*
 
 # 계정
 src/main/java/spring/db.properties
