--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-# 추가 디렉토리
+# 디렉토리
 /.settings
 /.vscode
 
-# 계정
+# 보안 설정
 src/main/java/spring/db.properties
 src/main/java/spring/mail.properties
+src/main/resources/wallet/
 
 # dependencies
 pom.xml
